finish-except-graph-2
